# math-for-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: STUDY_GUIDE.md
math_for_ai/: __init__.py  calculus.py  classical_ml.py  connections.py  curriculum.py  experiments.py  information.py  linear_algebra.py  numerics.py  optimization.py  probability.py
tests/: test_calculus_optimization.py  test_classical_ml.py  test_experiments.py  test_linear_algebra.py  test_probability_information_numerics.py
visualizer/: __init__.py  server.py
visualizer/static/: app.js  index.html  styles.css
