[project]
name = "math-for-ai-lab"
version = "0.1.0"
description = "A visual NumPy laboratory for the mathematics behind artificial intelligence."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["math_for_ai*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

